--- a/src/TemplateGen.Core/TemplateGen.Core.csproj
+++ b/src/TemplateGen.Core/TemplateGen.Core.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="JsonSchema.Net" Version="8.0.5" />
+  </ItemGroup>
+
 </Project>
