--- a/src/TemplateGen.Cli/TemplateGen.Cli.csproj
+++ b/src/TemplateGen.Cli/TemplateGen.Cli.csproj
@@ -5,6 +5,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="10.0.1" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
   </ItemGroup>
 
